Added accuracy graphs
Added graphs; continued to write rmd

--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -40,40 +40,34 @@ This figure represents the resulting error rates after training and testing. We 
 
 -->
 ### Our Pipeline:
-![image](./fig/Model_selection_plan.jpg)
-
-#### Image processing
-```{r}
-
-```
-<!--**Note: ** We used the full image to train and the full image to test throughout the project.-->
 
 <div style = "text-align: center;">
-  <span style="float:left;width: 40%;">
-    <b>Full image</b>
-  </span>
-  <span style="float:left;width: 20%;">
-    <b></b>
-  </span>
-  <span style="float:right;width: 40%;">
-    <b>Boxed image</b>
+  <span style="float:left;width: 100%;">
+  <IMG SRC="./fig/Model_selection_plan.jpg" float = "right" ALT="image">
   </span>
 </div>
 
+### Image processing
+
+#### Cropped Images
+Cropped images were chosen in for several reasons. For one, cropping reduces the computation time for training by decreasing the amount of data that is required to process an image. Second, and one of the most important, in order for us to create our visual vocabulary (codebook), we wanted our model to be very accurate and we knew that the main difference between cats and dogs are their facial features. One drawback from this method, however, was that we also had to limit the number of images we could train from. Also, the image split between cats and dogs was around 23 : 67, which could lead to bias in our results.
+
+#### Haar Cascade Classifiers
+Haar cascade classifiers take trained masks (black and white pixels) and use them for pattern recognition within an image. This is the method used in many face-detection programs (Facebook, your camera, etc.) as well as the method used in the infamous Viola-Jones face detection paper. 
+
 <div style = "width: 100%">
-  <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/Abyssinian_102.jpg">
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/HaarFeatures.png">
   </span>
-  <span style="float: left; width: 20%;">
-    <IMG SRC="./fig/arrow.png">
-  </span>
-  <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/Abyssinian_102f.jpg">
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/face_and_features.jpg">
   </span>
   <br style="clear: left;" />
 </div>
 
-<div style = "text-align: center;">
+A Haar cascade classifier was explored in order to automatically detect faces of cats and dogs from a given image (with background). This method would then have been utilized to detect and crop any potential new images, which would have allowed us to extract features only from the face and ignore the rest of the image. 
+
+<div style = "text-align: left;">
   <span style="float:left;width: 40%;">
     <b>Full image</b>
   </span>
@@ -84,47 +78,89 @@ This figure represents the resulting error rates after training and testing. We 
     <b>Boxed image</b>
   </span>
 </div>
-
+<br>&nbsp;<br> 
 <div style = "width: 100%">
   <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/chihuahua_103.jpg">
+    <IMG SRC="./fig/Abyssinian_102.jpg" height = "200px" width = "200px">
   </span>
   <span style="float: left; width: 20%;">
-    <IMG SRC="./fig/arrow.png">
+    <IMG SRC="./fig/arrow.png" height = "100px" width = "100px">
   </span>
-  <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/chihuahua_103f.jpg">
-  </span>
-  <br style="clear: left;" />
-</div>
-
-<div style = "text-align: center;">
-  <span style="float:left;width: 40%;">
-    <b>Full image</b>
-  </span>
-  <span style="float:left;width: 20%;">
-    <b></b>
-  </span>
-  <span style="float:right;width: 40%;">
-    <b>Boxed image</b>
-  </span>
-</div>
-
-<div style = "width: 100%">
-  <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/scottish_terrier_133.jpg">
-  </span>
-  <span style="float: left; width: 20%;">
-    <IMG SRC="./fig/arrow.png">
-  </span>
-  <span style="float: left; width: 40%;">
-    <IMG SRC="./fig/scottish_terrier_133f.jpg">
+  <span style="float: right; width: 40%;">
+    <IMG SRC="./fig/Abyssinian_102f.jpg" height = "200px" width = "200px">
   </span>
   <br style="clear: left;" />
 </div>
 <br>&nbsp;<br> 
+<div style = "width: 100%">
+  <span style="float: left; width: 40%;">
+    <IMG SRC="./fig/chihuahua_103.jpg" height = "200px" width = "200px">
+  </span>
+  <span style="float: left; width: 20%;">
+    <IMG SRC="./fig/arrow.png" height = "100px" width = "100px">
+  </span>
+  <span style="float: left; width: 40%;">
+    <IMG SRC="./fig/chihuahua_103f.jpg" height = "200px" width = "200px">
+  </span>
+  <br style="clear: left;" />
+</div>
+<br>&nbsp;<br> 
+<div style = "width: 100%">
+  <span style="float: left; width: 40%;">
+    <IMG SRC="./fig/scottish_terrier_133.jpg" height = "200px" width = "200px">
+  </span>
+  <span style="float: left; width: 20%;">
+    <IMG SRC="./fig/arrow.png" height = "100px" width = "100px">
+  </span>
+  <span style="float: left; width: 40%;">
+    <IMG SRC="./fig/scottish_terrier_133f.jpg" height = "200px" width = "200px">
+  </span>
+  <br style="clear: left;" />
+</div>
 
-#### SIFT
+In the end, we decided not to use a Haar cascade classifier. It worked well with the cat images but for some reason did not pick up on dogs' faces with the same level of accuracy. 
+
+#### Image Blurring and Edge Detection
+We investigated image blurring and edge detection in order to remove background noise and simplify images with many objects in them. 
+
+<div style = "text-align: center;">
+  <span style="float:left;width: 50%;">
+    <b>Grayscale</b>
+  </span>
+  <span style="float:right;width: 50%;">
+    <b>Grayscale + Blur</b>
+  </span>
+</div>
+<div style = "width: 100%">
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/dog.png">
+  </span>
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/blurred_dog.png">
+  </span>
+  <br style="clear: left;" />
+</div>
+<div style = "text-align: center;">
+  <span style="float:left;width: 50%;">
+    <b>Edge detection</b>
+  </span>
+  <span style="float:right;width: 50%;">
+    <b>Edge detection + Blur</b>
+  </span>
+</div>
+<div style = "width: 100%">
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/dog_edges.png">
+  </span>
+  <span style="float: left; width: 50%;">
+    <IMG SRC="./fig/dog_blurred_edges.png">
+  </span>
+  <br style="clear: left;" />
+</div>
+
+You can see from these comparisons that after adding the blurring effects, edge detection was still able to pick up much of the area around the face but simplify the details in the rest of the image, especially the grassy area. In the end, we chose to use a combination of blurring and edge detection to improve our method of feature selection, SIFT.
+
+### SIFT
 We chose to use scale invariant feature transformation (SIFT) as the feature detector and descriptor for image analysis. 
 
 The key challenge was to find a good balance between accuracy (# of keypoints/visual features) and time efficiency. The more keypoints we chose to keep, the higher the computational cost. But if we didn't keep enough keypoints, they wouldn't sufficiently represent the features we need to detect. For our base case, we decided on 25 keypoints per image.
@@ -154,21 +190,21 @@ To find the most optimal number of keypoints to work with, we arbitrarily chose 
   <IMG SRC="./fig/Keypoints_Acc_300.png" float = "right" ALT="image">
   </span>
 </div>
-<br>&nbsp;<br> 
+<br>&nbsp;<br>
 
-#### K-Means Clustering + Binning
-We chose to use k-means clustering to produce the visual vocabulary (codebook) because other better-performing clustering algorithms are often too slow and too memory-intensive. K-means sufficiently reduces the space of the data in a relatively fast and robust way.
+**Optimal number of keypoints = 300**
 
-<!--**Number of clusters = 150**-->
+### Mini Batch K-Means Clustering + Binning
+We wanted to use k-means clustering to produce the visual vocabulary (codebook) because other better-performing clustering algorithms are often too slow and too memory-intensive. K-means sufficiently reduces the space of the data in a relatively fast and robust way.
 
-Furthermore we used a variation of k-means in which we took mini-batches, i.e. MiniBatchKMeans, to reduce computation time but largely maintain similar results. The figure below shows an example of how the algorithm compares to using k-means.
+However, we used a variation of k-means in which we took mini-batches, i.e. MiniBatchKMeans, to reduce computation time but largely maintain similar results. Mini batch k-means samples from the population and finds the centroid from that sample for each iteration. The figure below shows an example of how the algorithm compares to using k-means.
 
 <div style = "text-align: center;">
   <span style="float:left;width: 100%;">
   <IMG SRC="./fig/Mini_Batch_Kmeans.png" float = "right" ALT="image">
   </span>
 </div>
-<br>&nbsp;<br> 
+<br>&nbsp;<br>
 
 Setting keypoints = 300, we again looked at the optimal number of clusters to use and found that many of the machine learning algorithms reached a performance peak at # of clusters = 150. Note that at # of clusters = 300, the performance of each algorithm generally stabilizes. This is intuitive since each cluster would only have one keypoint and so any number of clusters above 300 is trivial. (Also note that we are not sure why SVM in this situation behaved the way it did.)
 
@@ -179,20 +215,36 @@ Setting keypoints = 300, we again looked at the optimal number of clusters to us
 </div>
 <br>&nbsp;<br>
 
+**Optimal number of clusters = 150**
 
-#### Model selection + Testing
+### Model selection + Testing
 
-#### Final Model
+The graph below shows the classification accuracy using 5 k-fold cross validation. We can see that in almost all test cases, random forest (RF) outperformed all other models. 
 
-#### Performance improvement
++ Random forest had an average of 73.25% accuracy
++ AdaBoost had an average of 72.11% accuracy
++ Linear discriminant analysis had an average of 72.06% accuracy
+
+<div style = "text-align: center;">
+  <span style="float:left;width: 100%;">
+  <IMG SRC="./fig/R_Accuracy.png" float = "right" ALT="image">
+  </span>
+</div>
+<br>&nbsp;<br>
+
+We chose random forest for several reasons: 1) It had the highest average accuracy and 2) we know that random forests reduce the variance of the model which helps us avoid the issues that come with overfitting. We are sacrificing longer training periods for improved model performance compared to the baseline model.
+
+### Final Model
+
+### Performance improvement
 Average Accuracy for SVM: 0.68024585130518866
 
-#### Running cost tradeoff
+### Running cost tradeoff
 Average Train, Test time for SVM: 0.44722166061401369
 
 Average time for SIFT : 254.54186606407166
 
 Average time for Kmeans: 2.0315157890319826
 
-### Conclusion
+### Conclusion & Future Improvements
 
