Add color histogram from dog

--- a/Project 3.Rmd
+++ b/Project 3.Rmd
@@ -8,35 +8,27 @@ output: html_document
 ## Cat and Dog Classification
 For this project, our goal was to find an approach to classifying a collection of images featuring dogs and cats that was better than a currently existing baseline model, an SVM using color histograms for feature selection. 
 
-<!--
-Function used to find error rates:
-```{r}
-err.linear <- function(train.x, train.y, cost, K){
-  ix <- sample(1 : length(train.y))
-  begin <- 1 + seq(0, K - 1) * round(length(train.y) / K)
-  end <- begin + round(length(train.y) / K) - 1
-  len <- length(cost)
-  err <- rep(0, len)
-  for (i in 1 : len){
-    for (k in 1 : K){
-      test.ix <- ix[begin[k] : end[k]]
-      train.ix <- ix[-(begin[k] : end[k])]
-      m <- svm(train.x[train.ix, ], train.y[train.ix], type = 'C',
-             kernel = 'linear', cost = cost[i],gamma = 0)
-      y_hat <- predict(m, train.x[test.ix, ])
-      err[i] <- err[i] + sum(y_hat != train.y[test.ix]) / length(train.y[test.ix])
-    }
-  } 
-  err <- err / K
-  return(err)
-}
-```
-#### Error Rates
-![image](./fig/Linear_SVM_Results.png)
+### Baseline Model
+#### Linear SVM with Color Histogram
+The baseline model we're using is a straightforward SVM using color histograms as the feature selection. An example of the image processing and resulting features from one image is as follows:
+<div style = "width: 100%">
+  <span style="float: left; width: 40%;">
+    <IMG SRC="./fig/dog_histogram.png">
+  </span>
+  <span style="float: left; width: 20%;">
+    <IMG SRC="./fig/arrow.png">
+  </span>
+  <span style="float: right; width: 40%;">
+    <IMG SRC="./fig/Histogram.png">
+  </span>
+  <br style="clear: left;" />
+</div>
 
-This figure represents the resulting error rates after training and testing. We see that as the margin parameter increases, the error rate of classification increases as well, although not to a significant extent. Nonetheless, we could choose our optimal cost (lambda parameter) to be 25 if we were to continue using an SVM to classify these images.
++ Average accuracy for SVM + color histogram: 67.73%
++ Average training and testing time for SVM + color histogram: 70.10 seconds
 
--->
+But we can do better!!
+
 ### Our Pipeline:
 
 <div style = "text-align: center;">
@@ -48,7 +40,7 @@ This figure represents the resulting error rates after training and testing. We 
 ### Image processing
 
 #### Cropped Images
-Cropped images were chosen in for several reasons. For one, cropping reduces the computation time for training by decreasing the amount of data that is required to process an image. Second, and one of the most important, in order for us to create our visual vocabulary (codebook), we wanted our model to be very accurate and we knew that the main difference between cats and dogs are their facial features. One drawback from this method, however, was that we also had to limit the number of images we could train from. Also, the image split between cats and dogs was around 23 : 67, which could lead to bias in our results.
+Cropped images were chosen for several reasons. For one, cropping reduces the computation time for training by decreasing the amount of data that is required to process an image. Second, and one of the most important, in order for us to create our visual vocabulary (codebook), we wanted our model to be very accurate and we knew that the main difference between cats and dogs are their facial features. One drawback from this method, however, was that we also had to limit the number of images we could train from. Also, the image split between cats and dogs was around 23 : 67, which could lead to bias in our results.
 
 #### Haar Cascade Classifiers
 Haar cascade classifiers take trained masks (black and white pixels) and use them for pattern recognition within an image. This is the method used in many face-detection programs (Facebook, your camera, etc.) as well as the method used in the infamous Viola-Jones face detection paper. 
